made a slight correction to whiten the background color just a bit, fixed a slight alignment issue with the logo https://app.asana.com/0/161555263951776/168655807314381

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -12,7 +12,8 @@ html,
 body {
 	color: #000;
 	font-family: 'Roboto', sans-serif;
-	background-color: #ebf0ff;
+	background-color: #f4f4ff;
+	background-size: cover;
 }
 
 a,
